raw/hyper.0.5.0--2016-11-11-04-24-18--5.log
commit 280362a02df97670dd08ed19557c81b504b395c3
Merge: 3ac9ec7 12f0b6f
Author: bors <bors@rust-lang.org>
Date:   Thu Nov 10 23:44:44 2016 -0800

    Auto merge of #36615 - sinkuu:e0243_0244, r=nrc
    
    Make E0243/E0244 message consistent with E0107
    
    E0243/E0233 prints `expected {}, found {}` on the span note, while E0107 prints it on the first line. This is confusing when both error occur simultaneously.
    
    This PR makes E0243/E0233 print `expected {}, found {}` on the first line.
    
    Code:
    
    ``` rust
    struct Foo<'a, 'b> {
        s: &'a str,
        t: &'b str,
    }
    
    type Bar<T, U> = Foo<T, U>;
    ```
    
    rustc output (before):
    
    ```
    error[E0107]: wrong number of lifetime parameters: expected 2, found 0
     --> test.rs:6:18
      |
    6 | type Bar<T, U> = Foo<T, U>;
      |                  ^^^^^^^^^ expected 2 lifetime parameters
    
    error[E0244]: wrong number of type arguments
     --> test.rs:6:18
      |
    6 | type Bar<T, U> = Foo<T, U>;
      |                  ^^^^^^^^^ expected no type arguments, found 2
    ```
    
    rustc output (after):
    
    ```
    error[E0107]: wrong number of lifetime parameters: expected 2, found 0
     --> /tmp/test.rs:6:18
      |
    6 | type Bar<T, U> = Foo<T, U>;
      |                  ^^^^^^^^^ expected 2 lifetime parameters
    
    error[E0244]: wrong number of type arguments: expected 0, found 2
     --> /tmp/test.rs:6:18
      |
    6 | type Bar<T, U> = Foo<T, U>;
      |                  ^^^^^^^^^ expected no type arguments
    ```
rustc: ./hyper.0.5.0
cargo rustc  -- -Ztime-passes -Zinput-stats
   Compiling hyper v0.5.0 (file:///root/benchmarks/hyper.0.5.0)
time: 0.023; rss: 47MB	parsing
Lines of code:             9003
Pre-expansion node count:  44055
time: 0.000; rss: 47MB	recursion limit
time: 0.000; rss: 47MB	crate injection
time: 0.000; rss: 47MB	plugin loading
time: 0.000; rss: 47MB	plugin registration
time: 0.080; rss: 87MB	expansion
time: 0.000; rss: 87MB	maybe building test harness
time: 0.001; rss: 87MB	maybe creating a macro crate
Post-expansion node count: 101769
time: 0.000; rss: 87MB	checking for inline asm in case the target doesn't support it
time: 0.002; rss: 87MB	complete gated feature checking
time: 0.003; rss: 87MB	early lint checks
time: 0.001; rss: 87MB	AST validation
time: 0.015; rss: 91MB	name resolution
time: 0.007; rss: 95MB	lowering ast -> hir
time: 0.001; rss: 95MB	indexing hir
time: 0.001; rss: 95MB	attribute checking
time: 0.001; rss: 91MB	language item collection
time: 0.002; rss: 91MB	lifetime resolution
time: 0.000; rss: 91MB	looking for entry point
time: 0.000; rss: 91MB	looking for plugin registrar
time: 0.005; rss: 95MB	region resolution
time: 0.001; rss: 95MB	loop checking
time: 0.001; rss: 95MB	static item recursion checking
time: 0.037; rss: 95MB	compute_incremental_hashes_map
time: 0.000; rss: 95MB	load_dep_graph
time: 0.014; rss: 96MB	type collecting
time: 0.000; rss: 96MB	variance inference
time: 0.014; rss: 97MB	coherence checking
time: 0.040; rss: 98MB	wf checking
time: 0.024; rss: 100MB	item-types checking
time: 0.297; rss: 112MB	item-bodies checking
time: 0.000; rss: 112MB	drop-impl checking
time: 0.030; rss: 114MB	const checking
time: 0.005; rss: 114MB	privacy checking
time: 0.001; rss: 114MB	stability index
time: 0.003; rss: 114MB	intrinsic checking
time: 0.001; rss: 114MB	effect checking
time: 0.007; rss: 114MB	match checking
time: 0.004; rss: 115MB	liveness checking
time: 0.019; rss: 115MB	rvalue checking
time: 0.048; rss: 134MB	MIR dump
  time: 0.006; rss: 134MB	SimplifyCfg
  time: 0.012; rss: 136MB	QualifyAndPromoteConstants
  time: 0.012; rss: 136MB	TypeckMir
  time: 0.001; rss: 136MB	SimplifyBranches
  time: 0.003; rss: 136MB	SimplifyCfg
time: 0.041; rss: 136MB	MIR cleanup and validation
time: 0.050; rss: 137MB	borrow checking
time: 0.003; rss: 137MB	reachability checking
time: 0.004; rss: 137MB	death checking
time: 0.004; rss: 137MB	stability checking
time: 0.000; rss: 137MB	unused lib feature checking
time: 0.037; rss: 137MB	lint checking
time: 0.000; rss: 137MB	resolving dependency formats
  time: 0.001; rss: 137MB	NoLandingPads
  time: 0.003; rss: 137MB	SimplifyCfg
  time: 0.007; rss: 139MB	EraseRegions
  time: 0.001; rss: 139MB	AddCallGuards
  time: 0.021; rss: 141MB	ElaborateDrops
  time: 0.001; rss: 141MB	NoLandingPads
  time: 0.005; rss: 141MB	SimplifyCfg
  time: 0.003; rss: 141MB	InstCombine
  time: 0.003; rss: 141MB	Deaggregator
  time: 0.000; rss: 141MB	CopyPropagation
  time: 0.004; rss: 141MB	SimplifyLocals
  time: 0.001; rss: 141MB	AddCallGuards
  time: 0.000; rss: 141MB	PreTrans
time: 0.050; rss: 141MB	MIR optimisations
  time: 0.011; rss: 143MB	write metadata
  time: 0.119; rss: 151MB	translation item collection
  time: 0.015; rss: 153MB	codegen unit partitioning
  time: 0.014; rss: 205MB	internalize symbols
time: 0.951; rss: 205MB	translation
time: 0.000; rss: 205MB	assert dep graph
time: 0.000; rss: 205MB	serialize dep graph
  time: 0.086; rss: 150MB	llvm function passes [0]
  time: 0.042; rss: 152MB	llvm module passes [0]
  time: 1.660; rss: 153MB	codegen passes [0]
  time: 0.000; rss: 153MB	codegen passes [0]
time: 1.928; rss: 153MB	LLVM passes
time: 0.000; rss: 153MB	serialize work products
time: 0.068; rss: 94MB	linking
done
